Changed Sale classes to handle Exceptions